--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
-<head>google-site-verification: google8f575a622d3eb5ec.htm
+<head>google-site-verification: google8f575a622d3eb5ec.html
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>المحامي فادي حمود الدالاتي</title>
