--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
-<head><meta name="google-site-verification" content="19XAuj54xtUXMHxSJ3AdfpXVA9agy9yo1w47jvQmSpM" />
+<head>
+  <meta name="google-site-verification" content="19XAuj54xtUXMHxSJ3AdfpXVA9agy9yo1w47jvQmSpM" 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>المحامي فادي حمود الدالاتي</title>
