--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+  <meta name="google-site-verification" content="YjrYaqXtn1bERI1cp_ADlSdsWwYsrZ2vmWj3y3YoOVU" />
   <meta name="google-site-verification" content="19XAuj54xtUXMHxSJ3AdfpXVA9agy9yo1w47jvQmSpM" 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
